wip: fix layout and spacing

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
+* {
+  padding: 0;
+  margin: 0;
+}
+
 html {
   box-sizing: border-box;
   height: 100%;
@@ -10,7 +15,3 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
     Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
-
-/* .scroll {
-  overflow-y: hidden;
-} */
